# ClarusCAD

./: CMakeLists.txt  Info.desktop.in  Info.plist.in  README.md  test_import.dxf
.github/workflows/: build.yml  ci.yml  linux-build.yml  macos-build.yml  windows-build.yml
docs/: README.md
packaging/: Info.plist  resources.rc.txt
packs/: Info.plist.in  package_macos_dmg.sh.in  resources.rc
res/: resources.qrc
res/icons/app/: icon.icns
res/themes/: ClarusCAD.qss  Dark.qss  HelloKitty.qss  Light.qss  dark_green.qss
src/: Main.cpp
src/controller/: BaseCreationTool.h  BaseTool.h  CommandParser.cpp  CommandParser.h
src/controller/tools/: ArcCreationTool.cpp  ArcCreationTool.h  CircleCreationTool.cpp  CircleCreationTool.h  DeleteTool.cpp  DeleteTool.h  EllipseCreationTool.cpp  EllipseCreationTool.h  LineCreationTool.cpp  LineCreationTool.h  MoveTool.cpp  MoveTool.h  PolygonCreationTool.cpp  PolygonCreationTool.h  RectangleCreationTool.cpp  RectangleCreationTool.h  SegmentCreationTool.cpp  SegmentCreationTool.h  SplineCreationTool.cpp  SplineCreationTool.h
src/controller/tools/dimensions/: AngularDimensionCreationTool.cpp  AngularDimensionCreationTool.h  LinearDimensionCreationTool.cpp  LinearDimensionCreationTool.h  RadialDimensionCreationTool.cpp  RadialDimensionCreationTool.h
src/io/: DxfExporter.cpp  DxfExporter.h  DxfImporter.cpp  DxfImporter.h
src/model/: BasePrimitive.h  DimensionStyle.h  EnumManager.h  Point.h  Scene.cpp  Scene.h  Segment.h
src/model/primitives/: ArcPrimitive.cpp  ArcPrimitive.h  CirclePrimitive.cpp  CirclePrimitive.h  EllipsePrimitive.cpp  EllipsePrimitive.h  Point.cpp  Point.h  PointCreationPrimitive.cpp  PointCreationPrimitive.h  PointPrimitive.cpp  PointPrimitive.h  PolygonPrimitive.cpp  PolygonPrimitive.h  RectanglePrimitive.cpp  RectanglePrimitive.h  Segment.cpp  Segment.h  SegmentCreationPrimitive.cpp  SegmentCreationPrimitive.h  SegmentPrimitive.cpp  SegmentPrimitive.h  SplinePrimitive.cpp  SplinePrimitive.h
src/model/primitives/dimensions/: AngularDimensionPrimitive.cpp  AngularDimensionPrimitive.h  BaseDimensionPrimitive.cpp  BaseDimensionPrimitive.h  LinearDimensionPrimitive.cpp  LinearDimensionPrimitive.h  RadialDimensionPrimitive.cpp  RadialDimensionPrimitive.h
src/view/: BaseDockWidget.h  BaseDrawingTool.h  BasePanelWidget.cpp  BasePanelWidget.h  BasePropertiesWidget.cpp  BasePropertiesWidget.h  LinePropertiesWidget.cpp  LinePropertiesWidget.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  SettingsWindow.cpp  SettingsWindow.h  ThemeManager.cpp  ThemeManager.h  ToolbarPanel.cpp  ToolbarPanel.h  ViewportCamera.cpp  ViewportCamera.h  ViewportWidget.cpp  ViewportWidget.h
src/view/design/: AnimationManager.cpp  AnimationManager.h  ThemeManager.cpp  ThemeManager.h
src/view/dock-widgets/: PropertiesPanelWidget.cpp  PropertiesPanelWidget.h  SceneObjectsPanelWidget.cpp  SceneObjectsPanelWidget.h  ToolbarPanelWidget.cpp  ToolbarPanelWidget.h  ViewportPanelWidget.cpp  ViewportPanelWidget.h
src/view/drawing/: ArcDrawingTool.cpp  ArcDrawingTool.h  CircleDrawingTool.cpp  CircleDrawingTool.h  DimensionDrawingTool.cpp  DimensionDrawingTool.h  EllipseDrawingTool.cpp  EllipseDrawingTool.h  PolygonDrawingTool.cpp  PolygonDrawingTool.h  RectangleDrawingTool.cpp  RectangleDrawingTool.h  SegmentDrawingTool.cpp  SegmentDrawingTool.h  SplineDrawingTool.cpp  SplineDrawingTool.h
src/view/managers/: AnimationManager.cpp  AnimationManager.h  LineStyleManager.cpp  LineStyleManager.h  ObjectBindingManager.cpp  ObjectBindingManager.h  SettingsManager.cpp  SettingsManager.h  SnapManager.cpp  SnapManager.h  ThemeManager.cpp  ThemeManager.h
src/view/panels/: ConsolePanelWidget.cpp  ConsolePanelWidget.h  NavigationPanelWidget.cpp  NavigationPanelWidget.h  PropertiesPanelWidget.cpp  PropertiesPanelWidget.h  SceneObjectsPanelWidget.cpp  SceneObjectsPanelWidget.h  SceneSettingsPanelWidget.cpp  SceneSettingsPanelWidget.h  ToolbarPanelWidget.cpp  ToolbarPanelWidget.h  ViewportPanelWidget.cpp  ViewportPanelWidget.h
src/view/properities-widgets/: SegmentPropertiesWidget.cpp  SegmentPropertiesWidget.h
src/view/properties/: ArcPropertiesWidget.cpp  ArcPropertiesWidget.h  CirclePropertiesWidget.cpp  CirclePropertiesWidget.h  CommonPropertiesWidget.cpp  CommonPropertiesWidget.h  DimensionPropertiesWidget.cpp  DimensionPropertiesWidget.h  EllipsePropertiesWidget.cpp  EllipsePropertiesWidget.h  PolygonPropertiesWidget.cpp  PolygonPropertiesWidget.h  RectanglePropertiesWidget.cpp  RectanglePropertiesWidget.h  SegmentPropertiesWidget.cpp  SegmentPropertiesWidget.h  SplinePropertiesWidget.cpp  SplinePropertiesWidget.h
src/view/widgets/: FlyoutToolButton.cpp  FlyoutToolButton.h
